# docs/swagger.json
@@ -374,14 +374,23 @@
         "github_com_vladgrskkh_onerep-auth_internal_handler_user_dto.UpdateProfileRequest": {
             "type": "object",
             "properties": {
+                "avatar_url": {
+                    "type": "string"
+                },
                 "birth_date": {
                     "type": "string"
                 },
                 "display_name": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 100
                 },
                 "gender": {
-                    "type": "string"
+                    "type": "string",
+                    "enum": [
+                        "male",
+                        "female",
+                        "other"
+                    ]
                 }
             }
         },
