# internal/handler/user/dto/dto.go
@@ -10,6 +10,7 @@ type UpdateProfileRequest struct {
 	DisplayName *string `json:"display_name,omitzero" validate:"omitempty,max=100"`
 	Gender      *string `json:"gender,omitzero"       validate:"omitempty,oneof=male female other"`
 	BirthDate   *string `json:"birth_date,omitzero"   validate:"omitempty,datetime=2006-01-02"`
+	AvatarURL   *string `json:"avatar_url,omitzero"   validate:"omitempty"`
 }
 
 type UserProfileResponse struct {
